src/parser.output
Grammar

    0 $accept: source $end

    1 source: PROGRAM IDENTIFIER NEWLINE define_list stmt_list END_PROGRAM
    2       | PROGRAM IDENTIFIER NEWLINE define_list stmt_list END_PROGRAM NEWLINE

    3 define_list: /* empty */
    4            | define_list define_stmt

    5 $@1: /* empty */

    6 $@2: /* empty */

    7 define_stmt: DEFINE IDENTIFIER LPAREN $@1 param_list_opt RPAREN NEWLINE $@2 stmt_list END_DEFINE NEWLINE

    8 param_list_opt: /* empty */
    9               | param_list

   10 param_list: param
   11           | param_list COMMA param

   12 param: type_spec IDENTIFIER

   13 stmt_list: /* empty */
   14          | stmt_list statement

   15 statement: NEWLINE
   16          | set_stmt NEWLINE
   17          | say_stmt NEWLINE
   18          | give_stmt NEWLINE
   19          | call_stmt NEWLINE
   20          | when_stmt
   21          | repeat_stmt
   22          | while_stmt

   23 set_stmt: SET type_spec IDENTIFIER TO expr
   24         | SET IDENTIFIER TO expr

   25 say_stmt: SAY expr

   26 $@3: /* empty */

   27 when_stmt: WHEN condition NEWLINE $@3 stmt_list else_opt END_WHEN

   28 else_opt: /* empty */

   29 $@4: /* empty */

   30 else_opt: OTHERWISE NEWLINE $@4 stmt_list

   31 $@5: /* empty */

   32 repeat_stmt: REPEAT expr TIMES NEWLINE $@5 stmt_list END_REPEAT

   33 $@6: /* empty */

   34 while_stmt: WHILE condition NEWLINE $@6 stmt_list END_WHILE

   35 give_stmt: GIVE expr

   36 call_stmt: call_expr

   37 call_expr: CALL IDENTIFIER LPAREN arg_list_opt RPAREN

   38 arg_list_opt: /* empty */
   39             | arg_list

   40 arg_list: expr
   41         | arg_list COMMA expr

   42 type_spec: NUM
   43          | DECIMAL
   44          | TEXT

   45 condition: cond_or

   46 cond_or: cond_or OR cond_and
   47        | cond_and

   48 cond_and: cond_and AND cond_not
   49         | cond_not

   50 cond_not: NOT cond_not
   51         | cond_atom

   52 cond_atom: comparison
   53          | LPAREN condition RPAREN

   54 comparison: expr IS GREATER THAN expr
   55           | expr IS LESS THAN expr
   56           | expr IS EQUALS expr

   57 expr: expr PLUS term
   58     | expr MINUS term
   59     | term

   60 term: term STAR factor
   61     | term SLASH factor
   62     | factor

   63 factor: MINUS factor
   64       | primary

   65 primary: INT_LITERAL
   66        | FLOAT_LITERAL
   67        | STRING_LITERAL
   68        | IDENTIFIER
   69        | call_expr
   70        | LPAREN expr RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 1 2
WHEN (259) 27
OTHERWISE (260) 30
REPEAT (261) 32
TIMES (262) 32
WHILE (263) 34
DEFINE (264) 7
GIVE (265) 35
SAY (266) 25
SET (267) 23 24
TO (268) 23 24
NUM (269) 42
TEXT (270) 44
DECIMAL (271) 43
CALL (272) 37
AND (273) 48
OR (274) 46
NOT (275) 50
IS (276) 54 55 56
GREATER (277) 54
LESS (278) 55
THAN (279) 54 55
EQUALS (280) 56
END_WHEN (281) 27
END_REPEAT (282) 32
END_WHILE (283) 34
END_DEFINE (284) 7
END_PROGRAM (285) 1 2
IDENTIFIER (286) 1 2 7 12 23 24 37 68
STRING_LITERAL (287) 67
INT_LITERAL (288) 65
FLOAT_LITERAL (289) 66
NEWLINE (290) 1 2 7 15 16 17 18 19 27 30 32 34
PLUS (291) 57
MINUS (292) 58 63
STAR (293) 60
SLASH (294) 61
LPAREN (295) 7 37 53 70
RPAREN (296) 7 37 53 70
COMMA (297) 11 41
UMINUS (298)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
source (45)
    on left: 1 2, on right: 0
define_list (46)
    on left: 3 4, on right: 1 2 4
define_stmt (47)
    on left: 7, on right: 4
$@1 (48)
    on left: 5, on right: 7
$@2 (49)
    on left: 6, on right: 7
param_list_opt (50)
    on left: 8 9, on right: 7
param_list (51)
    on left: 10 11, on right: 9 11
param (52)
    on left: 12, on right: 10 11
stmt_list (53)
    on left: 13 14, on right: 1 2 7 14 27 30 32 34
statement (54)
    on left: 15 16 17 18 19 20 21 22, on right: 14
set_stmt (55)
    on left: 23 24, on right: 16
say_stmt (56)
    on left: 25, on right: 17
when_stmt (57)
    on left: 27, on right: 20
$@3 (58)
    on left: 26, on right: 27
else_opt (59)
    on left: 28 30, on right: 27
$@4 (60)
    on left: 29, on right: 30
repeat_stmt (61)
    on left: 32, on right: 21
$@5 (62)
    on left: 31, on right: 32
while_stmt (63)
    on left: 34, on right: 22
$@6 (64)
    on left: 33, on right: 34
give_stmt (65)
    on left: 35, on right: 18
call_stmt (66)
    on left: 36, on right: 19
call_expr (67)
    on left: 37, on right: 36 69
arg_list_opt (68)
    on left: 38 39, on right: 37
arg_list (69)
    on left: 40 41, on right: 39 41
type_spec (70)
    on left: 42 43 44, on right: 12 23
condition (71)
    on left: 45, on right: 27 34 53
cond_or (72)
    on left: 46 47, on right: 45 46
cond_and (73)
    on left: 48 49, on right: 46 47 48
cond_not (74)
    on left: 50 51, on right: 48 49 50
cond_atom (75)
    on left: 52 53, on right: 51
comparison (76)
    on left: 54 55 56, on right: 52
expr (77)
    on left: 57 58 59, on right: 23 24 25 32 35 40 41 54 55 56 57 58
    70
term (78)
    on left: 60 61 62, on right: 57 58 59 60 61
factor (79)
    on left: 63 64, on right: 60 61 62 63
primary (80)
    on left: 65 66 67 68 69 70, on right: 64


state 0

    0 $accept: . source $end

    PROGRAM  shift, and go to state 1

    source  go to state 2


state 1

    1 source: PROGRAM . IDENTIFIER NEWLINE define_list stmt_list END_PROGRAM
    2       | PROGRAM . IDENTIFIER NEWLINE define_list stmt_list END_PROGRAM NEWLINE

    IDENTIFIER  shift, and go to state 3


state 2

    0 $accept: source . $end

    $end  shift, and go to state 4


state 3

    1 source: PROGRAM IDENTIFIER . NEWLINE define_list stmt_list END_PROGRAM
    2       | PROGRAM IDENTIFIER . NEWLINE define_list stmt_list END_PROGRAM NEWLINE

    NEWLINE  shift, and go to state 5


state 4

    0 $accept: source $end .

    $default  accept


state 5

    1 source: PROGRAM IDENTIFIER NEWLINE . define_list stmt_list END_PROGRAM
    2       | PROGRAM IDENTIFIER NEWLINE . define_list stmt_list END_PROGRAM NEWLINE

    $default  reduce using rule 3 (define_list)

    define_list  go to state 6


state 6

    1 source: PROGRAM IDENTIFIER NEWLINE define_list . stmt_list END_PROGRAM
    2       | PROGRAM IDENTIFIER NEWLINE define_list . stmt_list END_PROGRAM NEWLINE
    4 define_list: define_list . define_stmt

    DEFINE  shift, and go to state 7

    $default  reduce using rule 13 (stmt_list)

    define_stmt  go to state 8
    stmt_list    go to state 9


state 7

    7 define_stmt: DEFINE . IDENTIFIER LPAREN $@1 param_list_opt RPAREN NEWLINE $@2 stmt_list END_DEFINE NEWLINE

    IDENTIFIER  shift, and go to state 10


state 8

    4 define_list: define_list define_stmt .

    $default  reduce using rule 4 (define_list)


state 9

    1 source: PROGRAM IDENTIFIER NEWLINE define_list stmt_list . END_PROGRAM
    2       | PROGRAM IDENTIFIER NEWLINE define_list stmt_list . END_PROGRAM NEWLINE
   14 stmt_list: stmt_list . statement

    WHEN         shift, and go to state 11
    REPEAT       shift, and go to state 12
    WHILE        shift, and go to state 13
    GIVE         shift, and go to state 14
    SAY          shift, and go to state 15
    SET          shift, and go to state 16
    CALL         shift, and go to state 17
    END_PROGRAM  shift, and go to state 18
    NEWLINE      shift, and go to state 19

    statement    go to state 20
    set_stmt     go to state 21
    say_stmt     go to state 22
    when_stmt    go to state 23
    repeat_stmt  go to state 24
    while_stmt   go to state 25
    give_stmt    go to state 26
    call_stmt    go to state 27
    call_expr    go to state 28


state 10

    7 define_stmt: DEFINE IDENTIFIER . LPAREN $@1 param_list_opt RPAREN NEWLINE $@2 stmt_list END_DEFINE NEWLINE

    LPAREN  shift, and go to state 29


state 11

   27 when_stmt: WHEN . condition NEWLINE $@3 stmt_list else_opt END_WHEN

    CALL            shift, and go to state 17
    NOT             shift, and go to state 30
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 36

    call_expr   go to state 37
    condition   go to state 38
    cond_or     go to state 39
    cond_and    go to state 40
    cond_not    go to state 41
    cond_atom   go to state 42
    comparison  go to state 43
    expr        go to state 44
    term        go to state 45
    factor      go to state 46
    primary     go to state 47


state 12

   32 repeat_stmt: REPEAT . expr TIMES NEWLINE $@5 stmt_list END_REPEAT

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    expr       go to state 49
    term       go to state 45
    factor     go to state 46
    primary    go to state 47


state 13

   34 while_stmt: WHILE . condition NEWLINE $@6 stmt_list END_WHILE

    CALL            shift, and go to state 17
    NOT             shift, and go to state 30
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 36

    call_expr   go to state 37
    condition   go to state 50
    cond_or     go to state 39
    cond_and    go to state 40
    cond_not    go to state 41
    cond_atom   go to state 42
    comparison  go to state 43
    expr        go to state 44
    term        go to state 45
    factor      go to state 46
    primary     go to state 47


state 14

   35 give_stmt: GIVE . expr

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    expr       go to state 51
    term       go to state 45
    factor     go to state 46
    primary    go to state 47


state 15

   25 say_stmt: SAY . expr

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    expr       go to state 52
    term       go to state 45
    factor     go to state 46
    primary    go to state 47


state 16

   23 set_stmt: SET . type_spec IDENTIFIER TO expr
   24         | SET . IDENTIFIER TO expr

    NUM         shift, and go to state 53
    TEXT        shift, and go to state 54
    DECIMAL     shift, and go to state 55
    IDENTIFIER  shift, and go to state 56

    type_spec  go to state 57


state 17

   37 call_expr: CALL . IDENTIFIER LPAREN arg_list_opt RPAREN

    IDENTIFIER  shift, and go to state 58


state 18

    1 source: PROGRAM IDENTIFIER NEWLINE define_list stmt_list END_PROGRAM .
    2       | PROGRAM IDENTIFIER NEWLINE define_list stmt_list END_PROGRAM . NEWLINE

    NEWLINE  shift, and go to state 59

    $default  reduce using rule 1 (source)


state 19

   15 statement: NEWLINE .

    $default  reduce using rule 15 (statement)


state 20

   14 stmt_list: stmt_list statement .

    $default  reduce using rule 14 (stmt_list)


state 21

   16 statement: set_stmt . NEWLINE

    NEWLINE  shift, and go to state 60


state 22

   17 statement: say_stmt . NEWLINE

    NEWLINE  shift, and go to state 61


state 23

   20 statement: when_stmt .

    $default  reduce using rule 20 (statement)


state 24

   21 statement: repeat_stmt .

    $default  reduce using rule 21 (statement)


state 25

   22 statement: while_stmt .

    $default  reduce using rule 22 (statement)


state 26

   18 statement: give_stmt . NEWLINE

    NEWLINE  shift, and go to state 62


state 27

   19 statement: call_stmt . NEWLINE

    NEWLINE  shift, and go to state 63


state 28

   36 call_stmt: call_expr .

    $default  reduce using rule 36 (call_stmt)


state 29

    7 define_stmt: DEFINE IDENTIFIER LPAREN . $@1 param_list_opt RPAREN NEWLINE $@2 stmt_list END_DEFINE NEWLINE

    $default  reduce using rule 5 ($@1)

    $@1  go to state 64


state 30

   50 cond_not: NOT . cond_not

    CALL            shift, and go to state 17
    NOT             shift, and go to state 30
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 36

    call_expr   go to state 37
    cond_not    go to state 65
    cond_atom   go to state 42
    comparison  go to state 43
    expr        go to state 44
    term        go to state 45
    factor      go to state 46
    primary     go to state 47


state 31

   68 primary: IDENTIFIER .

    $default  reduce using rule 68 (primary)


state 32

   67 primary: STRING_LITERAL .

    $default  reduce using rule 67 (primary)


state 33

   65 primary: INT_LITERAL .

    $default  reduce using rule 65 (primary)


state 34

   66 primary: FLOAT_LITERAL .

    $default  reduce using rule 66 (primary)


state 35

   63 factor: MINUS . factor

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    factor     go to state 66
    primary    go to state 47


state 36

   53 cond_atom: LPAREN . condition RPAREN
   70 primary: LPAREN . expr RPAREN

    CALL            shift, and go to state 17
    NOT             shift, and go to state 30
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 36

    call_expr   go to state 37
    condition   go to state 67
    cond_or     go to state 39
    cond_and    go to state 40
    cond_not    go to state 41
    cond_atom   go to state 42
    comparison  go to state 43
    expr        go to state 68
    term        go to state 45
    factor      go to state 46
    primary     go to state 47


state 37

   69 primary: call_expr .

    $default  reduce using rule 69 (primary)


state 38

   27 when_stmt: WHEN condition . NEWLINE $@3 stmt_list else_opt END_WHEN

    NEWLINE  shift, and go to state 69


state 39

   45 condition: cond_or .
   46 cond_or: cond_or . OR cond_and

    OR  shift, and go to state 70

    $default  reduce using rule 45 (condition)


state 40

   47 cond_or: cond_and .
   48 cond_and: cond_and . AND cond_not

    AND  shift, and go to state 71

    $default  reduce using rule 47 (cond_or)


state 41

   49 cond_and: cond_not .

    $default  reduce using rule 49 (cond_and)


state 42

   51 cond_not: cond_atom .

    $default  reduce using rule 51 (cond_not)


state 43

   52 cond_atom: comparison .

    $default  reduce using rule 52 (cond_atom)


state 44

   54 comparison: expr . IS GREATER THAN expr
   55           | expr . IS LESS THAN expr
   56           | expr . IS EQUALS expr
   57 expr: expr . PLUS term
   58     | expr . MINUS term

    IS     shift, and go to state 72
    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74


state 45

   59 expr: term .
   60 term: term . STAR factor
   61     | term . SLASH factor

    STAR   shift, and go to state 75
    SLASH  shift, and go to state 76

    $default  reduce using rule 59 (expr)


state 46

   62 term: factor .

    $default  reduce using rule 62 (term)


state 47

   64 factor: primary .

    $default  reduce using rule 64 (factor)


state 48

   70 primary: LPAREN . expr RPAREN

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    expr       go to state 77
    term       go to state 45
    factor     go to state 46
    primary    go to state 47


state 49

   32 repeat_stmt: REPEAT expr . TIMES NEWLINE $@5 stmt_list END_REPEAT
   57 expr: expr . PLUS term
   58     | expr . MINUS term

    TIMES  shift, and go to state 78
    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74


state 50

   34 while_stmt: WHILE condition . NEWLINE $@6 stmt_list END_WHILE

    NEWLINE  shift, and go to state 79


state 51

   35 give_stmt: GIVE expr .
   57 expr: expr . PLUS term
   58     | expr . MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 35 (give_stmt)


state 52

   25 say_stmt: SAY expr .
   57 expr: expr . PLUS term
   58     | expr . MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 25 (say_stmt)


state 53

   42 type_spec: NUM .

    $default  reduce using rule 42 (type_spec)


state 54

   44 type_spec: TEXT .

    $default  reduce using rule 44 (type_spec)


state 55

   43 type_spec: DECIMAL .

    $default  reduce using rule 43 (type_spec)


state 56

   24 set_stmt: SET IDENTIFIER . TO expr

    TO  shift, and go to state 80


state 57

   23 set_stmt: SET type_spec . IDENTIFIER TO expr

    IDENTIFIER  shift, and go to state 81


state 58

   37 call_expr: CALL IDENTIFIER . LPAREN arg_list_opt RPAREN

    LPAREN  shift, and go to state 82


state 59

    2 source: PROGRAM IDENTIFIER NEWLINE define_list stmt_list END_PROGRAM NEWLINE .

    $default  reduce using rule 2 (source)


state 60

   16 statement: set_stmt NEWLINE .

    $default  reduce using rule 16 (statement)


state 61

   17 statement: say_stmt NEWLINE .

    $default  reduce using rule 17 (statement)


state 62

   18 statement: give_stmt NEWLINE .

    $default  reduce using rule 18 (statement)


state 63

   19 statement: call_stmt NEWLINE .

    $default  reduce using rule 19 (statement)


state 64

    7 define_stmt: DEFINE IDENTIFIER LPAREN $@1 . param_list_opt RPAREN NEWLINE $@2 stmt_list END_DEFINE NEWLINE

    NUM      shift, and go to state 53
    TEXT     shift, and go to state 54
    DECIMAL  shift, and go to state 55

    $default  reduce using rule 8 (param_list_opt)

    param_list_opt  go to state 83
    param_list      go to state 84
    param           go to state 85
    type_spec       go to state 86


state 65

   50 cond_not: NOT cond_not .

    $default  reduce using rule 50 (cond_not)


state 66

   63 factor: MINUS factor .

    $default  reduce using rule 63 (factor)


state 67

   53 cond_atom: LPAREN condition . RPAREN

    RPAREN  shift, and go to state 87


state 68

   54 comparison: expr . IS GREATER THAN expr
   55           | expr . IS LESS THAN expr
   56           | expr . IS EQUALS expr
   57 expr: expr . PLUS term
   58     | expr . MINUS term
   70 primary: LPAREN expr . RPAREN

    IS      shift, and go to state 72
    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    RPAREN  shift, and go to state 88


state 69

   27 when_stmt: WHEN condition NEWLINE . $@3 stmt_list else_opt END_WHEN

    $default  reduce using rule 26 ($@3)

    $@3  go to state 89


state 70

   46 cond_or: cond_or OR . cond_and

    CALL            shift, and go to state 17
    NOT             shift, and go to state 30
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 36

    call_expr   go to state 37
    cond_and    go to state 90
    cond_not    go to state 41
    cond_atom   go to state 42
    comparison  go to state 43
    expr        go to state 44
    term        go to state 45
    factor      go to state 46
    primary     go to state 47


state 71

   48 cond_and: cond_and AND . cond_not

    CALL            shift, and go to state 17
    NOT             shift, and go to state 30
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 36

    call_expr   go to state 37
    cond_not    go to state 91
    cond_atom   go to state 42
    comparison  go to state 43
    expr        go to state 44
    term        go to state 45
    factor      go to state 46
    primary     go to state 47


state 72

   54 comparison: expr IS . GREATER THAN expr
   55           | expr IS . LESS THAN expr
   56           | expr IS . EQUALS expr

    GREATER  shift, and go to state 92
    LESS     shift, and go to state 93
    EQUALS   shift, and go to state 94


state 73

   57 expr: expr PLUS . term

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    term       go to state 95
    factor     go to state 46
    primary    go to state 47


state 74

   58 expr: expr MINUS . term

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    term       go to state 96
    factor     go to state 46
    primary    go to state 47


state 75

   60 term: term STAR . factor

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    factor     go to state 97
    primary    go to state 47


state 76

   61 term: term SLASH . factor

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    factor     go to state 98
    primary    go to state 47


state 77

   57 expr: expr . PLUS term
   58     | expr . MINUS term
   70 primary: LPAREN expr . RPAREN

    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    RPAREN  shift, and go to state 88


state 78

   32 repeat_stmt: REPEAT expr TIMES . NEWLINE $@5 stmt_list END_REPEAT

    NEWLINE  shift, and go to state 99


state 79

   34 while_stmt: WHILE condition NEWLINE . $@6 stmt_list END_WHILE

    $default  reduce using rule 33 ($@6)

    $@6  go to state 100


state 80

   24 set_stmt: SET IDENTIFIER TO . expr

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    expr       go to state 101
    term       go to state 45
    factor     go to state 46
    primary    go to state 47


state 81

   23 set_stmt: SET type_spec IDENTIFIER . TO expr

    TO  shift, and go to state 102


state 82

   37 call_expr: CALL IDENTIFIER LPAREN . arg_list_opt RPAREN

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    $default  reduce using rule 38 (arg_list_opt)

    call_expr     go to state 37
    arg_list_opt  go to state 103
    arg_list      go to state 104
    expr          go to state 105
    term          go to state 45
    factor        go to state 46
    primary       go to state 47


state 83

    7 define_stmt: DEFINE IDENTIFIER LPAREN $@1 param_list_opt . RPAREN NEWLINE $@2 stmt_list END_DEFINE NEWLINE

    RPAREN  shift, and go to state 106


state 84

    9 param_list_opt: param_list .
   11 param_list: param_list . COMMA param

    COMMA  shift, and go to state 107

    $default  reduce using rule 9 (param_list_opt)


state 85

   10 param_list: param .

    $default  reduce using rule 10 (param_list)


state 86

   12 param: type_spec . IDENTIFIER

    IDENTIFIER  shift, and go to state 108


state 87

   53 cond_atom: LPAREN condition RPAREN .

    $default  reduce using rule 53 (cond_atom)


state 88

   70 primary: LPAREN expr RPAREN .

    $default  reduce using rule 70 (primary)


state 89

   27 when_stmt: WHEN condition NEWLINE $@3 . stmt_list else_opt END_WHEN

    $default  reduce using rule 13 (stmt_list)

    stmt_list  go to state 109


state 90

   46 cond_or: cond_or OR cond_and .
   48 cond_and: cond_and . AND cond_not

    AND  shift, and go to state 71

    $default  reduce using rule 46 (cond_or)


state 91

   48 cond_and: cond_and AND cond_not .

    $default  reduce using rule 48 (cond_and)


state 92

   54 comparison: expr IS GREATER . THAN expr

    THAN  shift, and go to state 110


state 93

   55 comparison: expr IS LESS . THAN expr

    THAN  shift, and go to state 111


state 94

   56 comparison: expr IS EQUALS . expr

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    expr       go to state 112
    term       go to state 45
    factor     go to state 46
    primary    go to state 47


state 95

   57 expr: expr PLUS term .
   60 term: term . STAR factor
   61     | term . SLASH factor

    STAR   shift, and go to state 75
    SLASH  shift, and go to state 76

    $default  reduce using rule 57 (expr)


state 96

   58 expr: expr MINUS term .
   60 term: term . STAR factor
   61     | term . SLASH factor

    STAR   shift, and go to state 75
    SLASH  shift, and go to state 76

    $default  reduce using rule 58 (expr)


state 97

   60 term: term STAR factor .

    $default  reduce using rule 60 (term)


state 98

   61 term: term SLASH factor .

    $default  reduce using rule 61 (term)


state 99

   32 repeat_stmt: REPEAT expr TIMES NEWLINE . $@5 stmt_list END_REPEAT

    $default  reduce using rule 31 ($@5)

    $@5  go to state 113


state 100

   34 while_stmt: WHILE condition NEWLINE $@6 . stmt_list END_WHILE

    $default  reduce using rule 13 (stmt_list)

    stmt_list  go to state 114


state 101

   24 set_stmt: SET IDENTIFIER TO expr .
   57 expr: expr . PLUS term
   58     | expr . MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 24 (set_stmt)


state 102

   23 set_stmt: SET type_spec IDENTIFIER TO . expr

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    expr       go to state 115
    term       go to state 45
    factor     go to state 46
    primary    go to state 47


state 103

   37 call_expr: CALL IDENTIFIER LPAREN arg_list_opt . RPAREN

    RPAREN  shift, and go to state 116


state 104

   39 arg_list_opt: arg_list .
   41 arg_list: arg_list . COMMA expr

    COMMA  shift, and go to state 117

    $default  reduce using rule 39 (arg_list_opt)


state 105

   40 arg_list: expr .
   57 expr: expr . PLUS term
   58     | expr . MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 40 (arg_list)


state 106

    7 define_stmt: DEFINE IDENTIFIER LPAREN $@1 param_list_opt RPAREN . NEWLINE $@2 stmt_list END_DEFINE NEWLINE

    NEWLINE  shift, and go to state 118


state 107

   11 param_list: param_list COMMA . param

    NUM      shift, and go to state 53
    TEXT     shift, and go to state 54
    DECIMAL  shift, and go to state 55

    param      go to state 119
    type_spec  go to state 86


state 108

   12 param: type_spec IDENTIFIER .

    $default  reduce using rule 12 (param)


state 109

   14 stmt_list: stmt_list . statement
   27 when_stmt: WHEN condition NEWLINE $@3 stmt_list . else_opt END_WHEN

    WHEN       shift, and go to state 11
    OTHERWISE  shift, and go to state 120
    REPEAT     shift, and go to state 12
    WHILE      shift, and go to state 13
    GIVE       shift, and go to state 14
    SAY        shift, and go to state 15
    SET        shift, and go to state 16
    CALL       shift, and go to state 17
    NEWLINE    shift, and go to state 19

    $default  reduce using rule 28 (else_opt)

    statement    go to state 20
    set_stmt     go to state 21
    say_stmt     go to state 22
    when_stmt    go to state 23
    else_opt     go to state 121
    repeat_stmt  go to state 24
    while_stmt   go to state 25
    give_stmt    go to state 26
    call_stmt    go to state 27
    call_expr    go to state 28


state 110

   54 comparison: expr IS GREATER THAN . expr

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    expr       go to state 122
    term       go to state 45
    factor     go to state 46
    primary    go to state 47


state 111

   55 comparison: expr IS LESS THAN . expr

    CALL            shift, and go to state 17
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    INT_LITERAL     shift, and go to state 33
    FLOAT_LITERAL   shift, and go to state 34
    MINUS           shift, and go to state 35
    LPAREN          shift, and go to state 48

    call_expr  go to state 37
    expr       go to state 123
    term       go to state 45
    factor     go to state 46
    primary    go to state 47


state 112

   56 comparison: expr IS EQUALS expr .
   57 expr: expr . PLUS term
   58     | expr . MINUS term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 56 (comparison)


state 113

   32 repeat_stmt: REPEAT expr TIMES NEWLINE $@5 . stmt_list END_REPEAT

    $default  reduce using rule 13 (stmt_list)

    stmt_list  go to state 124


state 114

   14 stmt_list: stmt_list . statement
   34 while_stmt: WHILE condition NEWLINE $@6 stmt_list . END_WHILE

    WHEN       shift, and go to state 11
    REPEAT     shift, and go to state 12
    WHILE      shift, and go to state 13
    GIVE       shift, and go to state 14
    SAY        shift, and go to state 15
    SET        shift, and go to state 16
    CALL       shift, and go to state 17
    END_WHILE  shift, and go to state 125
    NEWLINE    shift, and go to state 19
